fix: spacing in publication for person list

--- a/Resources/Public/Css/hio_typo3_connector.css
+++ b/Resources/Public/Css/hio_typo3_connector.css
@@ -769,6 +769,10 @@ select {
   grid-row-start: 1;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
